fix: fix dev script
